syntax = "proto3";

package greet;
option go_package="bidirectionalpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}


message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string message = 1;
}


service GreetService {
    // Server Stream
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse){};
}
